Создание сущностей и DbContext

--- a/LibraryAPI/appsettings.json
+++ b/LibraryAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ConnectionStringsLocal": "Host=localhost;Port=5432;Database=LibraryDB;Username=admin;Password=admin;IncludeErrorDetail = true",
+    "ConnectionStringsDocker": "Host=localhost;Port=5432;Database=LibraryDB;Username=LibraryUser;Password=123456;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
