--- a/AppServices/AppServices.csproj
+++ b/AppServices/AppServices.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.7" />
+    </ItemGroup>
+
 </Project>
