--- a/ComponentRegistrar/ComponentRegistrar.csproj
+++ b/ComponentRegistrar/ComponentRegistrar.csproj
@@ -12,4 +12,8 @@
       <Folder Include="StartupRegistrars" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.7" />
+    </ItemGroup>
+
 </Project>
