--- a/Infrastructure/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure/Infrastructure.csproj
@@ -10,4 +10,8 @@
       <Folder Include="Middleware" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.7" />
+    </ItemGroup>
+
 </Project>
