--- a/ComponentRegistrar/ComponentRegistrar.csproj
+++ b/ComponentRegistrar/ComponentRegistrar.csproj
@@ -8,12 +8,17 @@
 
     <ItemGroup>
       <Folder Include="Configurators" />
-      <Folder Include="Registrars" />
       <Folder Include="StartupRegistrars" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-preview.7.22375.6" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0-preview.7.22375.6" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AppServices\AppServices.csproj" />
     </ItemGroup>
 
 </Project>
