--- a/Handlers/Handlers.csproj
+++ b/Handlers/Handlers.csproj
@@ -7,7 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MediatR" Version="10.0.1" />
+      <PackageReference Include="MediatR.Contracts" Version="1.0.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AppServices\AppServices.csproj" />
     </ItemGroup>
 
 </Project>
