--- a/LibraryAPI/Properties/launchSettings.json
+++ b/LibraryAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "LibraryAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7205;http://localhost:5205",
       "environmentVariables": {
